# WRTFM

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/memory/: MEMORY.md  wrtfm-platform.md
.github/workflows/: ci.yml  deploy-staging.yml
artifacts/wrtfm/: index.html  package.json
artifacts/wrtfm/.replit-artifact/: artifact.toml
artifacts/wrtfm/src/: App.tsx  index.css
backend/: Dockerfile  build.mjs  package.json  test-ocr-diag.ts  test-raw-ocr.ts  test-rotate-ocr.mjs  test-rotate-ocr.ts  test-rotation-debug.ts  tsconfig.json  vitest.config.ts
backend/api-spec/: openapi.yaml  orval.config.ts
backend/kyc-vision-service/: Dockerfile  download_paddleocr_models.py  main.py  requirements.txt
backend/models/face-api/: MODEL_SOURCES.md
backend/models/paddleocr/: MODEL_SOURCES.md
backend/models/silent-face-anti-spoofing/: MODEL_SOURCES.md
backend/src/: app.ts  env.ts  index.ts
backend/src/__tests__/: auth-security.test.ts  duplicate-detection-real-db.test.ts  duplicate-detection.test.ts  (+5 more)
deploy/nginx/: wrtfm.work.gd.conf
docs/: architecture.md  design-reference-notes.md  production-deployment-guide.md  production-execution-plan.md
docs/design/: wallet-and-kyc-design.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
lib/api-spec/: openapi.yaml
scripts/: production-preflight.sh
(+145 files in other folders)
