[package]
name = "control-automation-engine"
version = "0.1.0"
description = "Desktop shell for Worldwide Rapid Task For Money"
authors = ["Worldwide Rapid Task For Money"]
edition = "2021"
license = "MIT"

[lib]
name = "control_automation_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
